Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase00_03.out
<Type> ::= int
<Expr> ::= Integer
<Stmt> ::= <Type> ID = <Expr> ;
<Expr> ::= Integer
<Expr> ::= Integer
<Expr> ::= <Expr> < <Expr>
<Expr> ::= Integer
<Stmt> ::= ID = <Expr>
Parse error on line 10:
...    b = 4;         b = 4 + b;      els
----------------------^
Expecting 'else'